[package]
edition = "2021"
name = "vale-ls"
publish = false
version = "0.3.7"

[dependencies]
clap = {version = "4.2.1", features = ["derive"]}
dashmap = "5.1.0"
env_logger = "0.9.0"
thiserror = "1.0"
flate2 = "1.0.25"
im-rc = "15.0.0"
log = "0.4.14"
reqwest = {version = "0.11", features = ["json", "blocking"]}
ropey = "1.5.0"
semver = "1.0.17"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.78"
tar = "0.4.38"
tempfile = "3.5.0"
tokio = {version = "1.17.0", features = ["full"]}
tower-lsp = {version = "0.19.0", features = ["proposed"]}
which = "4.4.0"
yaml-rust = "0.4.5"
zip-extract = "0.1.2"
regex = "1.7.3"
open = "4.0.1"

[target.'cfg(unix)'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
